--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
             <td>Preventive Maintenance Summary</td>
             <td><span class="tag finance">IIT Support</span></td>
             <td><a href="https://docs.google.com/spreadsheets/d/1bLM35LBYPTVWiPEZqRZo3ycggMExQs-F/edit?gid=1395323195#gid=1395323195" target="_blank">Open Sheet</a></td>
-           
+
+                  <tr data-category="Support">
+            <td>Industrial-IT-Inspection-Template</td>
+            <td><span class="tag finance">IIT Support</span></td>
+            <td><a href="https://masudweb66.github.io/Industrial-IT-Inspection-Template/" target="_blank">Open Sheet</a></td>
+
+            <tr data-category="Support">
+            <td>Industrial-IT-Inspection google forms </td>
+            <td><span class="tag finance">IIT Support</span></td>
+            <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_7Lhx-fVv5jLW4ICbbaf7DiBs-7JfV9qouag72W4x7Uh96Q/viewform" target="_blank">Open Sheet</a></td>
+                      
             <tr data-category="Support">
             <td>Final Inventory Industrial IT, ICT Dept.</td>
             <td><span class="tag finance">IIT Support</span></td>
@@ -181,6 +191,7 @@ categoryFilter.addEventListener('change', filterTable);
 
 </body>
 </html>
+
 
 
 
